--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.45.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
@@ -72,6 +73,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "inngest-cli": "^1.13.4",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
