--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.43",
+    "@ai-sdk/google": "^2.0.30",
+    "@ai-sdk/openai": "^2.0.64",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -41,6 +44,7 @@
     "@trpc/client": "^11.7.1",
     "@trpc/server": "^11.7.1",
     "@trpc/tanstack-react-query": "^11.7.1",
+    "ai": "^5.0.90",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
