--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/google": "^2.0.30",
     "@ai-sdk/openai": "^2.0.64",
     "@hookform/resolvers": "^5.2.2",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
